[package]
name = "navra-modal-vision"
description = "Vision module for navra (image understanding, OCR, screen capture)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
navra-core = { path = "../navra-core" }
navra-macros = { path = "../navra-macros" }
navra-protocol = { path = "../navra-protocol" }
navra-security = { path = "../navra-security" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zbus = { version = "5", default-features = false, features = ["tokio"] }
base64 = "0.22"
dirs = "6"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
