[package]
name = "navra-modal-vision"
description = "Vision module for navra (image understanding, OCR, screen capture)"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
navra-mcp = { path = "../navra-mcp", default-features = false }
navra-macros = { path = "../navra-macros" }
navra-protocol = { path = "../navra-protocol" }
navra-auth = { path = "../navra-auth" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zbus = { version = "5", default-features = false, features = ["tokio"] }
base64 = "0.22"
dirs = "6"
futures-util = "0.3"

[features]
default = ["onnx"]
onnx = ["navra-mcp/onnx"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
