[package]
name = "navra-modal-voice"
description = "Voice I/O module for navra (ASR + TTS)"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
navra-mcp = { path = "../navra-mcp" }
navra-macros = { path = "../navra-macros" }
navra-protocol = { path = "../navra-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
cpal = "0.15"
dirs = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
