[package]
name = "navra-model-hub"
description = "Pull and cache AI models from OCI, HuggingFace, and Ollama registries"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
