[package]
name = "navra-model-runtime"
description = "Serve AI models with pluggable isolation backends (llama.cpp, vLLM, Podman, OpenShell)"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["podman", "direct"]
podman = []
direct = []
embedded = ["dep:llama-cpp-4", "dep:axum"]
embedded-cuda = ["embedded", "llama-cpp-4/cuda"]
embedded-metal = ["embedded", "llama-cpp-4/metal"]
embedded-vulkan = ["embedded", "llama-cpp-4/vulkan"]
kubernetes = []
openshell = ["tonic", "prost"]
tonic = ["dep:tonic"]
prost = ["dep:prost"]

[dependencies]
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
tonic = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
tonic-prost = "0.14"
llama-cpp-4 = { version = "0.3", default-features = false, optional = true }
axum = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"

[lints]
workspace = true
